# argos3_TFG

./: .gitignore  CMakeLists.txt  README
cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake
controllers/: CMakeLists.txt
controllers/kilobot_bayesiandecision/: CMakeLists.txt  kilobot_bayesiandecision.cpp  kilobot_bayesiandecision.h
controllers/kilobot_formation/: CMakeLists.txt  kilobot_formation.cpp  kilobot_formation.h
controllers/kilobot_shapebug/: CMakeLists.txt  kilobot_shapebug.cpp  kilobot_shapebug.h
experiments/: bayesian_decision.argos  formation.argos  lambs.argos  shapebug.argos
loop_functions/: CMakeLists.txt
loop_functions/bayesian_decision_loop_functions/: CMakeLists.txt  bayesian_decision_loop_functions.cpp  bayesian_decision_loop_functions.h
loop_functions/shapebug_loop_functions/: CMakeLists.txt  shapebug_loop_functions.cpp  shapebug_loop_functions.h
plugins/robots/: CMakeLists.txt
plugins/robots/kilobot_custom/: CMakeLists.txt
plugins/robots/kilobot_custom/control_interface/: ci_kilobot_custom_communication_actuator.cpp  ci_kilobot_custom_communication_actuator.h  ci_kilobot_custom_communication_sensor.cpp  ci_kilobot_custom_communication_sensor.h  ci_kilobot_custom_controller.cpp  ci_kilobot_custom_controller.h  ci_kilobot_custom_led_actuator.cpp  ci_kilobot_custom_led_actuator.h  ci_kilobot_custom_light_sensor.cpp  ci_kilobot_custom_light_sensor.h  debug.h  kilolib.c  kilolib.h
plugins/robots/kilobot_custom/simulator/: dynamics2d_kilobot_custom_model.cpp  dynamics2d_kilobot_custom_model.h  dynamics2d_kilobot_model.cpp  dynamics2d_kilobot_model.h  kilobot_communication_default_sensor.cpp  kilobot_communication_default_sensor.h  kilobot_communication_medium.cpp  kilobot_communication_medium.h  kilobot_custom_communication_default_actuator.cpp  kilobot_custom_communication_default_actuator.h  kilobot_custom_communication_default_sensor.cpp  kilobot_custom_communication_default_sensor.h  kilobot_custom_communication_entity.cpp  kilobot_custom_communication_entity.h  kilobot_custom_communication_medium.cpp  kilobot_custom_communication_medium.h  kilobot_custom_entity.cpp  kilobot_custom_entity.h  kilobot_custom_led_default_actuator.cpp  kilobot_custom_led_default_actuator.h  kilobot_custom_light_rotzonly_sensor.cpp  kilobot_custom_light_rotzonly_sensor.h  kilobot_custom_measures.h  kilobot_entity.cpp  kilobot_entity.h  kilobot_measures.h  pointmass3d_kilobot_custom_model.cpp  pointmass3d_kilobot_custom_model.h  pointmass3d_kilobot_model.cpp  pointmass3d_kilobot_model.h  qtopengl_kilobot.cpp  qtopengl_kilobot_custom.cpp  qtopengl_kilobot_custom.h
utility/: CMakeLists.txt  bmp1b.cpp  bmp1b.h
